--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,6 @@ filelock==3.9.0
 Flask==2.2.2
 Flask-Cors==3.0.10
 Flask-HTTPAuth==4.7.0
-mysqlclient==2.1.1
-PyMySQL==1.0.2
 Flask-MySQLdb==1.0.1
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==3.0.2
@@ -30,13 +28,16 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 multidict==6.0.4
+mysqlclient==2.1.1
 numpy==1.24.1
 openai==0.26.4
 packaging==23.0
 pandas==1.5.3
 pycparser==2.21
+PyMySQL==1.0.2
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2022.7
 PyYAML==6.0
 regex==2022.10.31
