--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 multidict==6.0.4
 mysqlclient==2.1.1
-numpy==1.24.1
+numpy
 openai==0.26.4
 packaging==23.0
 pandas==1.5.3
