--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,18 @@
-aiohttp==3.8.3
-aiosignal==1.3.1
-aniso8601==9.0.1
-async-timeout==4.0.2
-attrs==22.2.0
-beautifulsoup4==4.11.2
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
-colorama==0.4.6
-cors==1.0.1
-filelock==3.9.0
-Flask==2.2.2
-Flask-Cors==3.0.10
-Flask-HTTPAuth==4.7.0
-Flask-MySQLdb==1.0.1
-Flask-RESTful==0.3.9
-Flask-SQLAlchemy==3.0.2
-frozenlist==1.3.3
-future==0.18.3
-gevent==22.10.2
-greenlet==2.0.1
-html5lib==1.1
-huggingface-hub==0.11.1
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-multidict==6.0.4
-mysqlclient==2.1.1
+beautifulsoup4
+Flask
+Flask-Cors
+Flask-HTTPAuth
+Flask-MySQLdb
+Flask-RESTful
+Flask-SQLAlchemy
 numpy
-openai==0.26.4
-packaging==23.0
-pandas==1.5.3
-pycparser==2.21
-PyMySQL==1.0.2
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-pytz==2022.7
-PyYAML==6.0
-regex==2022.10.31
-requests==2.28.1
-requests-file==1.5.1
-Sastrawi==1.0.1
-six==1.16.0
-soupsieve==2.4
-SQLAlchemy==1.4.46
-tldextract==3.4.0
-tokenizers==0.13.2
-torch==1.13.1
-tqdm==4.64.1
-transformers==4.25.1
-typing_extensions==4.4.0
-urllib3==1.26.14
-webencodings==0.5.1
-Werkzeug==2.2.2
-yarl==1.8.2
-zope.event==4.6
-zope.interface==5.5.2
+openai
+pandas
+PyMySQL
+python-dateutil
+python-dotenv
+PyYAML
+Sastrawi
+SQLAlchemy
+torch
+transformers
