--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ HOST=cl75dz1i0rlh.ap-southeast-2.psdb.cloud
 USERNAME=ita5aqzc5i6d
 PASSWORD=************
 DATABASE=chatbot
+
+MYSQL_HOST=45.143.81.40
+MYSQL_USER=u1547396_haisus
+MYSQL_PASSWORD=dIvm$H#D@AL6
+MYSQL_DB=u1547396_haisus
