--- a/.env
+++ b/.env
@@ -3,7 +3,13 @@ USERNAME=ita5aqzc5i6d
 PASSWORD=************
 DATABASE=chatbot
 
-MYSQL_HOST=45.143.81.40
-MYSQL_USER=u1547396_haisus
-MYSQL_PASSWORD=dIvm$H#D@AL6
-MYSQL_DB=u1547396_haisus
+MYSQL_HOST=217.21.72.138
+MYSQL_USER=u1578105_haisus
+MYSQL_PASSWORD=XB,cY^-s+*gn
+MYSQL_DB=u1578105_haisus
+
+API_CHATGPT=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
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=haysus.cs@gmail.com
+MAIL_PASSWORD=jorxuqbkgdvxkash
