--- a/requirements.txt
+++ b/requirements.txt
@@ -8,16 +8,15 @@ Flask-SQLAlchemy
 numpy
 openai
 pandas
-PyMySQL
 python-dateutil
 python-dotenv
-PyYAML
 Sastrawi
-SQLAlchemy
 torch
 transformers
 keras
 tensorflow
 html5lib
 gunicorn
-python-dotenv
+pymongo
+pillow
+flask-apispec
